2002-09-10  Aaron Helsinger  <ahelsing@bbn.com>

	* org/cougaar/core/blackboard/Blackboard.java: 
	Bug # 2249: Pull out 2 constants into -D arguments.
	org.cougaar.core.blackboard.waitForNewCommChangeNotifications
	(default is 1000 ms, as before) is the time to wait for more community
	changes before getting the new ABA translations. This is the
	number Ray suggested tweaking.

	While I was there...
	org.cougaar.core.blackboard.waitForSomeCommChanges
	(default is 10000ms, as before) is the time to wait if have no comm
	changes before killing this thread.

2002-09-10  Michael Thome  <mthome@bbn.com>

	* org/cougaar/core/util/CheckJarsServlet.java
	A utility servlet which simply reports on the set of jars used by
	the queried agent, including cougaar build information when
	available.

2002-09-06  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/adaptivity/PlaybookManager.java:
	Bug #2207 -- PlaybookManager throws NoSuchElementException when an
	a playbook isn't specified.
	Check for missing playbook file name and log an error instead of
	the exception.

	* org/cougaar/core/adaptivity/OperatingModeServiceProvider.java:
	Bug #2235 -- Concurrent modification when iterating all OperatingMode
	names.
	getAllOperatingModeNames tried to return a safe Set of operating
	mode names, but used ReadOnlySet which is only a wrapper for the
	original set. A copy is needed to divorce the result given to the
	client from the keySet of the operating mode map which will
	continue to change as operating modes are added.

	* org/cougaar/core/adaptivity/PlayHelper.java: 
	* org/cougaar/core/adaptivity/AdaptivityEngine.java:
	Bug #2221 -- Adaptivity Engine should not log errors for missing
	operating modes
	Missing OperatingModes produce no complaint.
	Missing Conditions are printed only after running for awhile (one
	minute). The delay can be altered providing the plugin with a
	single long parameter giving milliseconds to delay. 

2002-08-30  Ray Tomlinson  <RTomlinson@bbn.com>
