@@ -136,16 +136,16 @@
     
     <!-- jarfiles required by this module, relative to various other paths -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="compile.jarlist" value="${target.lib}/bootstrap.jar,${target.lib}/util.jar,${target.sys}/xerces.jar,${target.sys}/log4j.jar,${target.sys}/servlet.jar"/>
+    <property name="compile.jarlist" value="${target.lib}/bootstrap.jar,${target.lib}/util.jar,${target.sys}/log4j.jar,${target.sys}/servlet.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="compile.abs.jarlist" value=""/>
 
     <!-- javadoc package spec for building javadocs -->
-    <property name="javadoc.packages" value="org.cougaar,org.cougaar.core.adaptivity,org.cougaar.core.agent,org.cougaar.core.agent.service.alarm,org.cougaar.core.agent.service.containment,org.cougaar.core.agent.service.democontrol,org.cougaar.core.agent.service.scheduler,org.cougaar.core.agent.service.uid,org.cougaar.core.blackboard,org.cougaar.core.domain,org.cougaar.core.logging,org.cougaar.core.mobility,org.cougaar.core.mobility.arch,org.cougaar.core.mobility.ldm,org.cougaar.core.mobility.ping,org.cougaar.core.mobility.plugin,org.cougaar.core.mobility.service,org.cougaar.core.mobility.servlet,org.cougaar.core.mts,org.cougaar.core.naming,org.cougaar.core.node,org.cougaar.core.node.service,org.cougaar.core.node.service.jvmdump,org.cougaar.core.persist,org.cougaar.core.plugin,org.cougaar.core.plugin.completion,org.cougaar.core.plugin.freeze,org.cougaar.core.qos.metrics,org.cougaar.core.relay,org.cougaar.core.service,org.cougaar.core.service.community,org.cougaar.core.service.identity,org.cougaar.core.servlet,org.cougaar.core.thread,org.cougaar.core.topology,org.cougaar.core.util,org.cougaar.multicast,org.cougaar.planning,org.cougaar.planning.ldm,org.cougaar.planning.ldm.asset,org.cougaar.planning.ldm.dq,org.cougaar.planning.ldm.lps,org.cougaar.planning.ldm.measure,org.cougaar.planning.ldm.plan,org.cougaar.planning.ldm.policy,org.cougaar.planning.ldm.predicate,org.cougaar.planning.ldm.trigger,org.cougaar.planning.plugin.asset,org.cougaar.planning.plugin.completion,org.cougaar.planning.plugin.legacy,org.cougaar.planning.plugin.node,org.cougaar.planning.plugin.util,org.cougaar.planning.service,org.cougaar.planning.servlet,org.cougaar.planning.servlet.data,org.cougaar.planning.servlet.data.completion,org.cougaar.planning.servlet.data.hierarchy,org.cougaar.planning.servlet.data.xml"/>
+    <property name="javadoc.packages" value="org.cougaar,org.cougaar.core.adaptivity,org.cougaar.core.agent,org.cougaar.core.agent.service.alarm,org.cougaar.core.agent.service.containment,org.cougaar.core.agent.service.democontrol,org.cougaar.core.agent.service.iamts,org.cougaar.core.agent.service.id,org.cougaar.core.agent.service.scheduler,org.cougaar.core.agent.service.uid,org.cougaar.core.blackboard,org.cougaar.core.domain,org.cougaar.core.logging,org.cougaar.core.mobility,org.cougaar.core.mobility.arch,org.cougaar.core.mobility.ldm,org.cougaar.core.mobility.ping,org.cougaar.core.mobility.plugin,org.cougaar.core.mobility.service,org.cougaar.core.mobility.servlet,org.cougaar.core.mts,org.cougaar.core.naming,org.cougaar.core.node,org.cougaar.core.node.service,org.cougaar.core.node.service.jvmdump,org.cougaar.core.persist,org.cougaar.core.plugin,org.cougaar.core.plugin.freeze,org.cougaar.core.qos.metrics,org.cougaar.core.relay,org.cougaar.core.service,org.cougaar.core.service.community,org.cougaar.core.service.identity,org.cougaar.core.servlet,org.cougaar.core.thread,org.cougaar.core.topology,org.cougaar.core.util,org.cougaar.multicast"/>
 
     <!-- Extra jars needed at run / unit-test time. -->
     <!-- WARNING: Only relative paths work here. -->
-    <property name="run.jarlist" value="${target.lib}/bootstrap.jar,${target.lib}/util.jar,${target.sys}/xerces.jar,${target.sys}/log4j.jar,${target.sys}/servlet.jar"/>
+    <property name="run.jarlist" value="${target.lib}/bootstrap.jar,${target.lib}/util.jar,${target.sys}/log4j.jar,${target.sys}/servlet.jar"/>
     <!-- Put absolute paths on this list, in the form of a path. -->
     <property name="run.abs.jarlist" value=""/>
     
