@@ -1,3 +1,9 @@
+2002-12-05  Todd Wright  <twright@bbn.com>
+
+	* *
+        Separated planning from core.  All "org/cougaar/planning"
+        code is now in the "planning" module.
+
 2002-09-10  Aaron Helsinger  <ahelsing@bbn.com>
 
 	* org/cougaar/core/blackboard/Blackboard.java: 
